[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Building/BuildingBarracks.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Building/BuildingBarracks.gd" type="Script" id=2]

[node name="BarracksBase" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Accessories" type="YSort" parent="."]

[node name="SoldierSpawnTimer" type="Timer" parent="."]
process_mode = 0

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 0, 18 )

[node name="Soldiers" type="YSort" parent="."]

[connection signal="timeout" from="SoldierSpawnTimer" to="." method="_on_SoldierSpawnTimer_timeout"]
